--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -19,11 +19,19 @@
             {{ day }}
           </div>
           <ng-container *ngFor="let room of rooms">
-            <div class="room-name">Room {{ room }}</div>
-            <div *ngFor="let day of days" [ngClass]="getCellClass(room, day)" class="cell"></div>
+            <div class="room-name">Room {{ room.roomId }}</div>
+            <div *ngFor="let day of days" [ngClass]="getCellClass(room.roomId,day)"
+             class="cell" 
+             (mousedown)="onCellClick(room.roomId, day)"
+             
+            >
+          </div>
           </ng-container>
+
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
