--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -11,7 +11,7 @@ body {
 .chart {
   display: grid;
   grid-template-columns: repeat(32, 1fr); /* 1 for room names + 30 days */
-  grid-gap: 1px;
+  /* grid-gap: 1px; */
   /* border-bottom: 0.1rem solid #949090; */
   background-color: #dee2e6;
 }
@@ -22,7 +22,9 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #f8f9fa;
-  border-right: 1px solid #dee2e6;
+  /* border-right: 2px solid #dee2e6;
+  border-bottom: 2px solid #dee2e6; */
+  border: 0.1rem solid #ddd;
   height: 30px;
   padding: 0 5px;
   white-space: nowrap;
@@ -36,6 +38,7 @@ body {
   justify-content: center;
   background-color: #f1f1f1;
   border-bottom: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
   height: 30px;
 }
 
@@ -44,6 +47,9 @@ body {
   height: 30px;
   text-align: center;
   vertical-align: middle;
+  /* border-right: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6; */
+  border:  0.1rem solid #ddd;
 }
 
 .available {
@@ -51,13 +57,10 @@ body {
 }
 
 .cell.available{
-  cursor: move;
   display: inline-flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  position: relative;
-  z-index: 1;
 }
 
 .not-available {
@@ -74,65 +77,19 @@ body {
   z-index: 1;
 }
 
-/* .cell .reserved{
-  border: none;
-} */
-
 .available.weekend {
   background-color: #d4edda;
 }
-.resizable-bar {
-  position: absolute;
-  height: 100%;
-  background-color: rgba(0, 123, 255, 0.5);
-  cursor: move;
-  z-index: 10;
+
+.cell.reserved{
+ border: none;
 }
 
-.resizer {
-  width: 10px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  background-color: rgba(0, 123, 255, 0.7);
-  cursor: ew-resize;
+.cell.selected{
+  background-color: #007bff;
+  border: none;
 }
 
-.resizer.left {
-  left: 0;
-}
-
-.resizer.right {
-  right: 0;
-}
-
-.highlight {
-  background-color: rgba(0, 123, 255, 0.5);
-}
-
-.example-box {
-  width: 200px;
-  height: 200px;
-  border: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  cursor: move;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background: #fff;
-  border-radius: 4px;
-  margin-right: 25px;
-  position: relative;
-  z-index: 1;
-  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-              0 2px 2px 0 rgba(0, 0, 0, 0.14),
-              0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.example-box:active {
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+.selected {
+  border: 2px solid #007bff; /* Blue border for selected cells */
 }
