--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,4 @@
     <router-outlet></router-outlet>
 </div>
 
-  <app-event-resizer></app-event-resizer>
+  <!-- <app-event-resizer></app-event-resizer> -->
