--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -29,12 +29,15 @@ body {
 
 .day-header {
   display: flex;
+  flex-direction: column; 
   align-items: center;
   justify-content: center;
   background-color: #f1f1f1;
   border-bottom: 1px solid #dee2e6;
   border-right: 1px solid #dee2e6;
-  height: 30px;
+  height: 50px;
+  padding: 5px;  
+  font-weight: bold;
 }
 
 .available {
