--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -16,28 +16,25 @@
         <div class="chart">
           <div class="day-header">Room</div>
           <div *ngFor="let day of days" [ngClass]="{ 'day-header': true, 'weekend': isWeekend(day) }">
-            {{ day }}
+            {{ day }}<br>
+            <span>{{ getDayName(day) }}</span>
           </div>
           <ng-container *ngFor="let room of rooms">
             <div class="room-name">Room {{ room.roomId }}</div>
             <div *ngFor="let day of days" 
-            [ngClass]="getCellClass(room.roomId,day)"
-            (mousedown)="onMouseDown(room.roomId, day, $event)"
-            (mouseover)="onMouseOver(room.roomId, day, $event)"
-            (mouseup)="onMouseUp($event)"
-            (click)="onCellClick(room.roomId, day)"
-            class="cell" 
-            [ngStyle]="{ 'pointer-events': isCellClickable(room.roomId, day) ? 'auto' : 'none' }"
-          >
-          </div>
+              [ngClass]="getCellClass(room.roomId,day)"
+              (mousedown)="onMouseDown(room.roomId, day, $event)"
+              (mouseover)="onMouseOver(room.roomId, day, $event)"
+              (mouseup)="onMouseUp($event)"
+              (click)="onCellClick(room.roomId, day)"
+              class="cell" 
+              [ngStyle]="{ 'pointer-events': isCellClickable(room.roomId, day) ? 'auto' : 'none' }"
+            >
+            </div>
           </ng-container>
-
         </div>
       </div>
     </div>
   </div>
 </div>
 <button (click)="logSelectedRange()">Log Selected Range</button>
-
-
-
