--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -20,7 +20,8 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #f8f9fa;
-  border: 0.5px  rgb(90, 85, 85); 
+  /* border: 0.5px  rgb(90, 85, 85);  */
+  border:1px solid #EAEAEA;
   height: 30px;
   padding: 0 5px;
   white-space: nowrap;
@@ -36,7 +37,8 @@ body {
   background-color: #f1f1f1;
   /* border-bottom: 1px solid black;
   border-right: 1px solid black; */
-  border: 0.5px  rgb(90, 85, 85); 
+  /* border: 0.5px  rgb(90, 85, 85);  */
+  border:1px solid #FEFEFE;
   height: 50px;
   padding: 5px;  
   font-weight: bold;
@@ -45,6 +47,14 @@ body {
 /* .available {
   background-color: #d4edda;
 } */
+
+.current-month{
+  padding-top: 10px;
+}
+
+h4{
+  color: darkslategray;
+}
 
 .cell.available {
   display: inline-flex;
@@ -68,10 +78,6 @@ body {
 
 .available.weekend {
   background-color: #d4edda;
-}
-
-.cell.reserved {
-  border: none;
 }
 
 .cell {
@@ -107,4 +113,34 @@ body {
 .cell.selected {
   background-color: #007bff !important; /* Blue background for selected cells */
   border: 2px solid #007bff !important; /* Blue border for selected cells */
+}
+
+.cell.reserved {
+  position: relative;
+  display: inline-block;
+  border: none;
+}
+
+.cell.reserved::after {
+  content: attr(title);
+  position: absolute;
+  bottom: 100%; /* Position above the cell */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 4px;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s;
+  font-size: 12px;
+  z-index: 1000;
+}
+
+/* Show tooltip on hover */
+.cell.reserved:hover::after {
+  opacity: 1;
+  visibility: visible;
 }
