--- a/src/app/booking-reservation/booking-reservation.component.html
+++ b/src/app/booking-reservation/booking-reservation.component.html
@@ -4,30 +4,35 @@
   <thead>
     <tr>
       <th>Reservation ID</th>
-      <th>Location ID</th>
+      <th>Customer name</th>
+      <!-- <th>Location ID</th> -->
       <th>Room ID</th>
       <th>Customer ID</th>
       <th>Arrival Date</th>
       <th>Departure Date</th>
       <th>Reservation Date</th>
-      <th>Total Price</th>
       <th>Status</th>
+      <th>Total Price</th>
       <th>Paid Amount</th>
+      <th>Due Amount</th>
       <th>Number of Guests</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let reservation of reservations">
       <td>{{ reservation.reservationId }}</td>
-      <td>{{ reservation.locationId }}</td>
+      <td>{{ reservation.firstName }}</td>
+      <!-- <td>{{ reservation.locationId }}</td> -->
       <td>{{ reservation.roomId }}</td>
       <td>{{ reservation.customerId }}</td>
       <td>{{ reservation.arrivalDate | date:'yyyy-MM-dd' }}</td>
       <td>{{ reservation.departureDate | date:'yyyy-MM-dd' }}</td>
       <td>{{ reservation.reservationDate | date:'yyyy-MM-dd HH:mm:ss' }}</td>
-      <td>{{ reservation.totalPrice }}</td>
       <td>{{ reservation.status }}</td>
+      <td>{{ reservation.totalPrice }}</td>
+      
       <td>{{ reservation.paidAmount }}</td>
+      <td>{{ reservation.dueAmount }}</td>
       <td>{{ reservation.numberOfGuest }}</td>
     </tr>
   </tbody>
