--- a/src/app/filter/filter.component.css
+++ b/src/app/filter/filter.component.css
@@ -85,7 +85,7 @@
 
 .container {
   padding: 0.5rem;
-  background-color: #f8f9fa;
+  /* background-color: #f8f9fa; */
   border-radius: 8px;
 }
 
@@ -182,7 +182,7 @@ thead.thead-dark th {
 .form-text {
   font-size: 1rem; /* Smaller text size */
   padding: px;
-  background: #f8f9fa;
+  /* background: #f8f9fa; */
   /* border: 1px solid #ced4da; */
   border-radius: 0.25rem;
   color: #495057;
