--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -130,7 +130,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="bookingModalLabel" style="color: darkcyan;">Booking Details</h5>
+        <h5 class="modal-title" id="bookingModalLabel" style="color: darkcyan; font-size: 1.5rem;">Booking Details</h5>
         <button type="button" class="btn-close" (click)="closeBookingModal()"></button>
       </div>
       <div class="modal-body">
@@ -160,7 +160,7 @@
               </div>
               <div class="form-group">
                 <label class="form-label">Reservation date</label>
-                <p class="form-text">{{ bookingForm.get('reservationDate')?.value | date:'short' }}</p>
+                <p class="form-text">{{ bookingForm.get('reservationDate')?.value | date }}</p>
               </div>
               <div class="form-group">
                 <label class="form-label">Guests</label>
@@ -185,7 +185,8 @@
             <div class="row mb-3">
               <div class="col-12">
                 <label for="customerId" class="form-label">Customer ID</label>
-                <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly>
+                <p class="form-text">{{ customerForm.get('customerId')?.value }}</p>
+                <!-- <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly> -->
               </div>
             </div>
             
@@ -193,6 +194,7 @@
               <div class="col-md-4">
                 <label for="firstName" class="form-label">First Name</label>
                 <input type="text" id="firstName" class="form-control" formControlName="firstName">
+                
               </div>
               <div class="col-md-4">
                 <label for="middleName" class="form-label">Middle Name</label>
@@ -202,9 +204,9 @@
                 <label for="lastName" class="form-label">Last Name</label>
                 <input type="text" id="lastName" class="form-control" formControlName="lastName">
               </div>
-              <div *ngIf="customerForm.get('firstName')?.invalid && customerForm.get('firstName')?.touched">
-                <small *ngIf="customerForm.get('firstName')?.errors" class="text-danger">First name is required.</small>
-                <small *ngIf="customerForm.get('firstName')?.errors" class="text-danger"> First name must be at least 2 characters long.</small>
+              <div *ngIf="customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty">
+                <small *ngIf="customerForm.get('firstName')?.hasError('required')" class="text-danger">First name is required.</small>
+                <small *ngIf="customerForm.get('firstName')?.hasError('minlength')" class="text-danger">First name must be at least 2 characters long.</small>
               </div>
               <div *ngIf="customerForm.get('middleName')?.invalid">
                 <small *ngIf="customerForm.get('middleName')?.errors" class="text-danger">Middle name must have alhpabets only.</small>
