--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light  bg-light sticky-top" >
-    <a class="navbar-brand" href="#">Reservation</a>
+    <a class="navbar-brand" href="#">
+      <img src="Assets/plugin.png" alt="Logo" height="40px" width="160px">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
