--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -2,6 +2,26 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
+      <div class="legends container">
+        <div class="row legend">
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: rgb(199, 97, 97);"></div>
+            <span class="legend-box-span">Booked periods</span>
+          </div>
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: #c3e6cb;"></div>
+            <span class="legend-box-span">Arrival available periods</span>
+          </div>
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: #EAEAEA;"></div>
+            <span class="legend-box-span">Blocked non-arrival periods</span>
+          </div>
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: #58a5be;"></div>
+            <span class="legend-box-span">Selected periods</span>
+          </div>
+        </div>
+      </div>
       <div class="current-month row align-items-center justify-content-center" >
         <div class="col-md-3 text-center">
           <button (click)="changeMonth(-1)" class="btn btn-primary">‹</button>
@@ -28,36 +48,18 @@
               (mousedown)="onMouseDown(room.roomId, day, $event)"
               (mouseover)="onMouseOver(room.roomId, day, $event)"
               (mouseup)="onMouseUp($event)"
-              
               class="cell" 
-              [attr.data-tooltip]="getTooltipText(room.roomId, day)"
+              
               [ngStyle]="{ 'pointer-events': isCellClickable(room.roomId, day) ? 'auto' : 'none' }"
             >
+            
             </div>
           </ng-container>
         </div>
       </div>
-      <div class="legends container">
-        <div class="row legend">
-          <div class="legend-item">
-            <div class="legend-box" style="background-color: rgb(199, 97, 97);"></div>
-            <span class="legend-box-span">Booked periods</span>
-          </div>
-          <div class="legend-item">
-            <div class="legend-box" style="background-color: #c3e6cb;"></div>
-            <span class="legend-box-span">Available booking periods</span>
-          </div>
-          <div class="legend-item">
-            <div class="legend-box" style="background-color: #EAEAEA;"></div>
-            <span class="legend-box-span">Blocked periods</span>
-          </div>
-          <div class="legend-item">
-            <div class="legend-box" style="background-color: #58a5be;"></div>
-            <span class="legend-box-span">Selected periods</span>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </div>
 </div>
 <!-- <button (click)="logSelectedRange()">Log Selected Range</button> -->
+
